--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "buildCommand": "npm install",
   "outputDirectory": "public",
   "functions": {
-    "src/index-vercel.js": {
+    "api/index.js": {
       "memory": 1024,
       "maxDuration": 300
     }
