--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "nodemon": "^3.1.11"
   }
 }
